--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,12 @@
   box-sizing: border-box;
 }
 
-textarea {
+textarea, input, button {
     resize: none;
     outline: none;
     border: none;
 }
+
+
 
 
